Multiple sections added, with real content and a couple of images

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
+        <title>University of York Festive Feature 2015</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,66 +22,123 @@
         <section class="section--type3 section--light" id="intro">
             <div class="section__content">
                 <div class="section__text">
-                    <p>We are the world's foremost widget-makers, Widgets 'R' Us.</p>
+                    <h1><img class="section__logo" src="img/logo-light.png" alt="University of York logo"></h1>
+                    <p>2015 has been a busy year at the University of York. New buildings have been built, graduands have become graduates and this year's new influx of students have descended on to campus.</p>
+                    <p>Scroll down to see some of the statistics that have made up 2015 for us.</p>
                 </div>
             </div>
         </section>
-        <section class="section--type1" id="section1">
+        <section class="section--type1" id="timetable">
             <div class="section__content">
                 <div class="section__number">
-                    <h2 class="section__font--medium">1,234,567</h2>
+                    <h2 class="section__font--medium">4,248,031</h2>
                 </div>
                 <div class="section__text">
-                    <p>widgets manufactured since July</p>
-                </div>
-                <div class="section__link">
-                    <a href="#">Find out how widgets are made</a>
+                    <p>timetabled hours in the academic year. That's over 177,000 days, or almost 485 years!</p>
                 </div>
             </div>
         </section>
-        <section class="section--type2 section--image section--light" style="background-image:url(/img/escape-flight.png);" id="section2">
+        <section class="section--type2" id="light">
             <div class="section__content">
                 <div class="section__number">
-                    <h2 class="section__font--huge">67</h2>
+                    <h2 class="section__font--medium">176,700<small>mph</small></h2>
                 </div>
                 <div class="section__text">
-                    <p>widgets patented since October</p>
+                    <p>Our scientists slowed light down to 176,700mph, a snail's pace compared to the 671 million mph it usually reaches.</p>
                 </div>
                 <div class="section__link">
-                    <a href="#">Find out how widgets are made</a>
+                    <a href="http://www.york.ac.uk/news-and-events/news/2015/research/slow-light-microscopic-world/">Find out how scientists slowed down light</a>
                 </div>
             </div>
         </section>
-        <section class="section--type2" id="section3">
+        <section class="section--type2" id="emails">
             <div class="section__content">
                 <div class="section__number">
-                    <h2 class="section__font--large">123<small>rd</small></h2>
+                    <h2 class="section__font--medium">56,103</h2>
                 </div>
                 <div class="section__text">
-                    <p>widget manufacturer in the world (by volume)</p>
-                </div>
-                <div class="section__link">
-                    <a href="#">Find out how widgets are made</a>
+                    <p>emails sent in a single day this year by staff and students from their uni accounts.</p>
                 </div>
             </div>
         </section>
-        <section class="section--type3 section--light" id="section4">
+        <section class="section--type3 section--light" id="plants">
             <div class="section__content">
                 <div class="section__number">
-                    <h2 class="section__font--medium">1,234,567</h2>
+                    <h2 class="section__font--medium">12,778</h2>
                 </div>
                 <div class="section__text">
-                    <p>widgets manufactured since July</p>
+                    <p>plants planted across campus</p>
+                </div>
+            </div>
+        </section>
+        <section class="section--type3 section--light" id="tickets">
+            <div class="section__content">
+                <div class="section__number">
+                    <h2 class="section__font--large">8,817</h2>
+                </div>
+                <div class="section__text">
+                    <p>tickets issued for this year's Festival of Ideas, making it the biggest yet! Over 150 talks, performances and exhibitions held over two weeks.</p>
                 </div>
                 <div class="section__link">
-                    <a href="#">Find out how widgets are made</a>
+                    <a href="http://yorkfestivalofideas.com/2016/">Get ready for next year's Festival of Ideas</a>
+                </div>
+            </div>
+        </section>
+        <section class="section--type3 section--light" id="books">
+            <div class="section__content">
+                <div class="section__number">
+                    <h2 class="section__font--large">1,803</h2>
+                </div>
+                <div class="section__text">
+                    <p>books added to the library thanks to suggestions from students via the MoreBooks scheme.</p>
+                </div>
+                <div class="section__link">
+                    <a href="https://www.york.ac.uk/library/borrowing/morebooks/">Find out when the MoreBooks scheme is running next</a>
+                </div>
+            </div>
+        </section>
+        <section class="section--type3 section--light section--image" id="birds" style="background-image:url(img/goose.jpg);">
+            <div class="section__content">
+                <div class="section__number">
+                    <h2 class="section__font--large">175</h2>
+                </div>
+                <div class="section__text">
+                    <p>birdboxes on campus this year, in addition to the 50 bat boxes, 200 ducks and hundreds of other geese, moorhens and coots.</p>
+                </div>
+            </div>
+        </section>
+        <section class="section--type3 section--light" id="awards">
+            <div class="section__content">
+                <div class="section__number">
+                    <h2 class="section__font--huge">42</h2>
+                </div>
+                <div class="section__text">
+                    <p>awards were made to PhD students thanks to alumni donations.</p>
+                </div>
+                <div class="section__link">
+                    <a href="http://www.yorkspace.net/giving">Find out how you can change someone's academic life with an alumnus donation</a>
+                </div>
+            </div>
+        </section>
+        <section class="section--type3 section--light section--image" id="chancellor" style="background-image:url(img/grant.jpg);">
+            <div class="section__content">
+                <div class="section__number">
+                    <h2 class="section__font--huge">1</h2>
+                </div>
+                <div class="section__text">
+                    <p>new Chancellor. Professor Sir Malcolm Grant was inaugurated in October as the university's sixth Chancellor.</p>
+                </div>
+                <div class="section__link">
+                    <a href="http://www.york.ac.uk/chancellor-inauguration/sir-malcolm-grant/">Find out about our new Chancellor</a>
                 </div>
             </div>
         </section>
         <section class="section--type1" id="outro">
             <div class="section__content">
                 <div class="section__text">
-                    <p>That's it. Go home.</p>
+                    <p>Phew! What a year. And we're looking forward to 2016 being even bigger and better!</p>
+                    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=uniofyork" async="async"></script>
+                    <div class="addthis_sharing_toolbox"></div>
                 </div>
             </div>
         </section>
