--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <script src="//use.typekit.net/dvj8rpp.js"></script>
+        <script>try{Typekit.load();}catch(e){}</script>
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -22,121 +24,79 @@
         <section class="section--type3 section--light" id="intro">
             <div class="section__content">
                 <div class="section__text">
-                    <h1><img class="section__logo" src="img/logo-light.png" alt="University of York logo"></h1>
-                    <p>2015 has been a busy year at the University of York. New buildings have been built, graduands have become graduates and this year's new influx of students have descended on to campus.</p>
-                    <p>Scroll down to see some of the statistics that have made up 2015 for us.</p>
+                    <h1 class="section__logo"><img src="img/logo-dark.png" alt="University of York logo"></h1>
+                    <p>2015 has been a busy year at the University of York. New buildings have been built, graduands have become graduates and this year's new influx of students have descended on to&nbsp;campus.</p>
+                    <p>Scroll down to see some of the statistics that have made up 2015 for&nbsp;us.</p>
                 </div>
             </div>
         </section>
         <section class="section--type1" id="timetable">
             <div class="section__content">
-                <div class="section__number">
-                    <h2 class="section__font--medium">4,248,031</h2>
-                </div>
+                <div class="section__stat"><strong class="section__number">4,248,031</strong> timetabled hours in the academic&nbsp;year.</div>
                 <div class="section__text">
-                    <p>timetabled hours in the academic year. That's over 177,000 days, or almost 485 years!</p>
+                    <p>That's over 177,000 days, or almost 485 years!</p>
                 </div>
             </div>
         </section>
         <section class="section--type2" id="light">
             <div class="section__content">
-                <div class="section__number">
-                    <h2 class="section__font--medium">176,700<small>mph</small></h2>
-                </div>
+                <div class="section__stat">Our scientists slowed light down to&nbsp;<strong class="section__number">176,700<small>mph</small></strong></div>
                 <div class="section__text">
-                    <p>Our scientists slowed light down to 176,700mph, a snail's pace compared to the 671 million mph it usually reaches.</p>
-                </div>
-                <div class="section__link">
-                    <a href="http://www.york.ac.uk/news-and-events/news/2015/research/slow-light-microscopic-world/">Find out how scientists slowed down light</a>
+                    <p>A snail's pace compared to the 671 million mph it usually reaches. Find out how scientists <a href="http://www.york.ac.uk/news-and-events/news/2015/research/slow-light-microscopic-world/">slowed down light</a>.</p>
                 </div>
             </div>
         </section>
-        <section class="section--type2" id="emails">
+        <section class="section--type3" id="emails">
             <div class="section__content">
-                <div class="section__number">
-                    <h2 class="section__font--medium">56,103</h2>
-                </div>
-                <div class="section__text">
-                    <p>emails sent in a single day this year by staff and students from their uni accounts.</p>
-                </div>
+                <div class="section__stat"><strong class="section__number">56,103</strong> emails sent in a single day this year by staff and students from their uni&nbsp;accounts.</div>
             </div>
         </section>
-        <section class="section--type3 section--light" id="plants">
+        <section class="section--type1 section--light" id="plants">
             <div class="section__content">
-                <div class="section__number">
-                    <h2 class="section__font--medium">12,778</h2>
-                </div>
-                <div class="section__text">
-                    <p>plants planted across campus</p>
-                </div>
+                <div class="section__stat"><strong class="section__number">12,778</strong> plants planted across&nbsp;campus</div>
             </div>
         </section>
-        <section class="section--type3 section--light" id="tickets">
+        <section class="section--type2 section--light" id="tickets">
             <div class="section__content">
-                <div class="section__number">
-                    <h2 class="section__font--large">8,817</h2>
-                </div>
+                <div class="section__stat"><strong class="section__number">8,817</strong> tickets issued for this year's <a href="http://yorkfestivalofideas.com/2015/">Festival of Ideas</a>, making it the biggest&nbsp;yet!</div>
                 <div class="section__text">
-                    <p>tickets issued for this year's Festival of Ideas, making it the biggest yet! Over 150 talks, performances and exhibitions held over two weeks.</p>
-                </div>
-                <div class="section__link">
-                    <a href="http://yorkfestivalofideas.com/2016/">Get ready for next year's Festival of Ideas</a>
+                    <p>Over 150 talks, performances and exhibitions held over two weeks.</p>
                 </div>
             </div>
         </section>
         <section class="section--type3 section--light" id="books">
             <div class="section__content">
-                <div class="section__number">
-                    <h2 class="section__font--large">1,803</h2>
-                </div>
+                <div class="section__stat"><strong class="section__number">1,803</strong> books added to the library thanks to suggestions from students via the <a href="https://www.york.ac.uk/library/borrowing/morebooks/">MoreBooks&nbsp;scheme</a>.</div>
+            </div>
+        </section>
+        <section class="section--type1 section--light" id="birds">
+            <div class="section__content">
+                <div class="section__stat"><strong class="section__number">175</strong> birdboxes on campus this&nbsp;year.</div>
                 <div class="section__text">
-                    <p>books added to the library thanks to suggestions from students via the MoreBooks scheme.</p>
-                </div>
-                <div class="section__link">
-                    <a href="https://www.york.ac.uk/library/borrowing/morebooks/">Find out when the MoreBooks scheme is running next</a>
+                    <p>That's in addition to the 50 bat boxes, 200 ducks and hundreds of other geese, moorhens and coots.</p>
                 </div>
             </div>
         </section>
-        <section class="section--type3 section--light section--image" id="birds" style="background-image:url(img/goose.jpg);">
+        <section class="section--type2 section--light" id="awards">
             <div class="section__content">
-                <div class="section__number">
-                    <h2 class="section__font--large">175</h2>
-                </div>
+                <div class="section__stat"><strong class="section__number">42</strong> awards were made to PhD students thanks to alumni&nbsp;donations.</div>
                 <div class="section__text">
-                    <p>birdboxes on campus this year, in addition to the 50 bat boxes, 200 ducks and hundreds of other geese, moorhens and coots.</p>
+                    <p><a href="http://www.yorkspace.net/giving">Find out how you can change someone's academic life with an alumnus donation</a></p>
                 </div>
             </div>
         </section>
-        <section class="section--type3 section--light" id="awards">
+        <section class="section--type3 section--light" id="chancellor">
             <div class="section__content">
-                <div class="section__number">
-                    <h2 class="section__font--huge">42</h2>
-                </div>
+                <div class="section__stat"><strong class="section__number">1</strong> new&nbsp;Chancellor.</div>
                 <div class="section__text">
-                    <p>awards were made to PhD students thanks to alumni donations.</p>
-                </div>
-                <div class="section__link">
-                    <a href="http://www.yorkspace.net/giving">Find out how you can change someone's academic life with an alumnus donation</a>
-                </div>
-            </div>
-        </section>
-        <section class="section--type3 section--light section--image" id="chancellor" style="background-image:url(img/grant.jpg);">
-            <div class="section__content">
-                <div class="section__number">
-                    <h2 class="section__font--huge">1</h2>
-                </div>
-                <div class="section__text">
-                    <p>new Chancellor. Professor Sir Malcolm Grant was inaugurated in October as the university's sixth Chancellor.</p>
-                </div>
-                <div class="section__link">
-                    <a href="http://www.york.ac.uk/chancellor-inauguration/sir-malcolm-grant/">Find out about our new Chancellor</a>
+                    <p><a href="http://www.york.ac.uk/chancellor-inauguration/sir-malcolm-grant/">Professor Sir Malcolm Grant</a> was inaugurated in October as the university's sixth Chancellor.</p>
                 </div>
             </div>
         </section>
         <section class="section--type1" id="outro">
             <div class="section__content">
                 <div class="section__text">
-                    <p>Phew! What a year. And we're looking forward to 2016 being even bigger and better!</p>
+                    <p>Phew! What a year. And we're looking forward to 2016 being even bigger and&nbsp;better!</p>
                     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=uniofyork" async="async"></script>
                     <div class="addthis_sharing_toolbox"></div>
                 </div>
