--- a/index.html
+++ b/index.html
@@ -22,13 +22,16 @@
         <![endif]-->
 
         <section class="section--type3 section--light" id="intro">
+            <h1 class="intro__logo"><img src="img/logo-dark.png" alt="University of York logo"></h1>
             <div class="section__content">
                 <div class="section__text">
-                    <h1 class="section__logo"><img src="img/logo-dark.png" alt="University of York logo"></h1>
-                    <p>2015 has been a busy year at the University of York. New buildings have been built, graduands have become graduates and this year's new influx of students have descended on to&nbsp;campus.</p>
+                    <h2 class="intro__header">2015</h2>
+                    <h3 class="intro__subheader">The Year in Review</h3>
+                    <p>It's been a busy year at the University of York. New buildings have been built, graduands have become graduates and this year's new influx of students have descended on to&nbsp;campus.</p>
                     <p>Scroll down to see some of the statistics that have made up 2015 for&nbsp;us.</p>
                 </div>
             </div>
+            <a class="intro__scroll" href="#timetable">Scroll down</a>
         </section>
         <section class="section--type1" id="timetable">
             <div class="section__content">
@@ -81,7 +84,7 @@
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">42</strong> awards were made to PhD students thanks to alumni&nbsp;donations.</div>
                 <div class="section__text">
-                    <p><a href="http://www.yorkspace.net/giving">Find out how you can change someone's academic life with an alumnus donation</a></p>
+                    <p>Find out how you can change someone's academic life with <a href="http://www.yorkspace.net/giving">an alumnus donation</a></p>
                 </div>
             </div>
         </section>
@@ -93,9 +96,10 @@
                 </div>
             </div>
         </section>
-        <section class="section--type1" id="outro">
+        <section class="section--type1 section--image" id="outro" style="background-image:url(img/fireworks-teal.jpg);">
             <div class="section__content">
                 <div class="section__text">
+                    <h2 class="outro__header">Happy holidays!</h2>
                     <p>Phew! What a year. And we're looking forward to 2016 being even bigger and&nbsp;better!</p>
                     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=uniofyork" async="async"></script>
                     <div class="addthis_sharing_toolbox"></div>
