Bit of minification and space saving. New Modernizr.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <script src="js/vendor/modernizr-custom.min.js"></script>
         <script src="//use.typekit.net/dvj8rpp.js"></script>
         <script>try{Typekit.load();}catch(e){}</script>
     </head>
@@ -33,7 +33,7 @@
                     <h2 class="intro__header">2015</h2>
                     <h3 class="intro__subheader">The Year in Review</h3>
                     <p>It's been a busy year at the University of York. New buildings have been built, graduands have become graduates and this year's new influx of students have descended on to campus.</p>
-                    <p>Scroll down to see some of the statistics that have made up 2015 for us.</p>
+                    <p>Scroll down to see some of the statistics that have made our 2015.</p>
                 </div>
             </div>
             <a class="intro__scroll" href="#timetable">Scroll down</a>
