Text amends, colour tweaks and removed image from outro

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="section__text">
                     <h2 class="intro__header">2015</h2>
                     <h3 class="intro__subheader">The Year in Review</h3>
-                    <p>It's been a busy year at the University of York. New buildings have been built, graduands have become graduates and this year's new influx of students have descended on to campus.</p>
+                    <p>It's been a busy year at the University of York. New buildings have been built, graduands have become graduates and this year's new influx of students have descended on campus.</p>
                     <p>Scroll down to see some of the statistics that have made up 2015 for us.</p>
                 </div>
             </div>
@@ -48,7 +48,7 @@
         </section>
         <section class="section--type2" id="second">
             <div class="section__content">
-                <div class="section__stat"><strong class="section__number">2<small>nd</small></strong> in command</div>
+                <div class="section__stat">A new <strong class="section__number">2<small>nd</small></strong> in command</div>
                 <div class="section__text">
                     <p>Professor Saul Tendler took over as Deputy Vice-Chancellor and Provost.</p>
                 </div>
@@ -112,12 +112,17 @@
                 <div class="section__stat"><strong class="section__number">42</strong> PhD students received funds thanks to alumni donations</div>
             </div>
         </section>
-        <section class="section--type3" id="graduation">
+        <section class="section--type3" id="goose-poo">
+            <div class="section__content">
+                <div class="section__stat"><strong class="section__number">45</strong> working days were spent clearing goose poo from paths around campus</div>
+            </div>
+        </section>
+        <section class="section--type4" id="graduation">
             <div class="section__content">
                 <div class="section__stat">Viewers from <strong class="section__number">51</strong> countries watched graduation online</div>
             </div>
         </section>
-        <section class="section--type4" id="life-sciences">
+        <section class="section--type1" id="life-sciences">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">55<small>th</small></strong> in the world for Life Sciences</div>
                 <div class="section__text">
@@ -125,15 +130,15 @@
                 </div>
             </div>
         </section>
-        <section class="section--type1" id="masters-scholarships">
+        <section class="section--type2" id="masters-scholarships">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">60</strong> scholarships for Masters study were awarded to students from under-represented groups</div>
                 <div class="section__text">
-                    <p>Each award is worth £10,000.</p>
+                    <p>Each award was worth £10,000.</p>
                 </div>
             </div>
         </section>
-        <section class="section--type2" id="roses">
+        <section class="section--type3" id="roses">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">86</strong> points lay between York and Lancaster as we won the the Carter James Trophy for the 26th time</div>
                 <div class="section__text">
@@ -141,12 +146,12 @@
                 </div>
             </div>
         </section>
-        <section class="section--type3" id="conversation">
+        <section class="section--type4" id="conversation">
             <div class="section__content">
-                <div class="section__stat"><strong class="section__number">100</strong> articles have been contributed to <a href="https://theconversation.com/institutions/university-of-york">theconversation.com</a> by our academics</div>
+                <div class="section__stat"><strong class="section__number">100</strong> articles have been contributed to <a href="https://theconversation.com/institutions/university-of-york">The Conversation</a> by our academics</div>
             </div>
         </section>
-        <section class="section--type4" id="qs-rankings">
+        <section class="section--type1" id="qs-rankings">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">103<small>rd</small></strong> in the QS World University Rankings</div>
                 <div class="section__text">
@@ -154,23 +159,23 @@
                 </div>
             </div>
         </section>
-        <section class="section--type1" id="undergrad-bursaries">
+        <section class="section--type2" id="undergrad-bursaries">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">121</strong> undergraduate bursaries</div>
                 <div class="section__text">
-                    <p>were funded by donations from alumni and friends</p>
+                    <p>were funded by donations from alumni and friends.</p>
                 </div>
             </div>
         </section>
-        <section class="section--type2" id="public-lectures">
+        <section class="section--type3" id="public-lectures">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">182</strong> public lectures on campus</div>
                 <div class="section__text">
-                    <p>with almost 18,000 attendees</p>
+                    <p>with almost 18,000 attendees.</p>
                 </div>
             </div>
         </section>
-        <section class="section--type3" id="students-abroad">
+        <section class="section--type4" id="students-abroad">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">242</strong> of our students went abroad</div>
                 <div class="section__text">
@@ -178,17 +183,12 @@
                 </div>
             </div>
         </section>
-        <section class="section--type4" id="visiting-students">
+        <section class="section--type1" id="visiting-students">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">251</strong> visiting students came to York</div>
                 <div class="section__text">
                     <p>from 28 countries around the world.</p>
                 </div>
-            </div>
-        </section>
-        <section class="section--type1" id="goose-poo">
-            <div class="section__content">
-                <div class="section__stat"><strong class="section__number">1,080</strong> hours were spent clearing goose poo from paths around campus</div>
             </div>
         </section>
         <section class="section--type2" id="graduate-research-school">
@@ -206,7 +206,7 @@
         </section>
         <section class="section--type4" id="publications">
             <div class="section__content">
-                <div class="section__stat"><strong class="section__number">1,916</strong> new publications were added to York Research Database by our academics</div>
+                <div class="section__stat"><strong class="section__number">1,916</strong> new publications were added to the York Research Database by our academics</div>
             </div>
         </section>
         <section class="section--type1" id="donors">
@@ -227,12 +227,7 @@
                 </div>
             </div>
         </section>
-        <section class="section--type4" id="new-students">
-            <div class="section__content">
-                <div class="section__stat"><strong class="section__number">x,xxx</strong> new students joined us</div>
-            </div>
-        </section>
-        <section class="section--type1" id="festival-of-ideas">
+        <section class="section--type4" id="festival-of-ideas">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">8,817</strong> tickets were issued for Festival of Ideas events</div>
                 <div class="section__text">
@@ -240,22 +235,22 @@
                 </div>
             </div>
         </section>
-        <section class="section--type2" id="plants">
+        <section class="section--type1" id="plants">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">12,778</strong> plants were planted across campus</div>
             </div>
         </section>
-        <section class="section--type3" id="open-days">
+        <section class="section--type2" id="open-days">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">14,717</strong> people booked to attend Open Days</div>
             </div>
         </section>
-        <section class="section--type4" id="student-body">
+        <section class="section--type3" id="student-body">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">15,353</strong> students made up this years' student body</div>
             </div>
         </section>
-        <section class="section--type1" id="student-projects">
+        <section class="section--type4" id="student-projects">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">&pound;43,405</strong> was raised for student projects</div>
                 <div class="section__text">
@@ -263,7 +258,7 @@
                 </div>
             </div>
         </section>
-        <section class="section--type2" id="volunteers">
+        <section class="section--type1" id="volunteers">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">49,927</strong> hours were volunteered by our students</div>
                 <div class="section__text">
@@ -271,44 +266,37 @@
                 </div>
             </div>
         </section>
-        <section class="section--type3" id="projector">
+        <section class="section--type2" id="projector">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">126,000</strong> hours of projector use</div>
             </div>
         </section>
-        <section class="section--type4" id="speed-of-light">
-            <div class="section__content">
-                <div class="section__stat">Our scientists <a href="http://www.york.ac.uk/news-and-events/news/2015/research/slow-light-microscopic-world/">slowed light down</a> to <strong class="section__number">176,700<small>miles per hour</small></strong></div>
-                <div class="section__text">
-                    <p>That's a snail's pace compared to its usual 671,000,000 miles per hour.</p>
-                </div>
-            </div>
-        </section>
-        <section class="section--type1" id="books-loaned">
+        <section class="section--type3" id="books-loaned">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">286,156</strong> books were loaned from the library</div>
             </div>
         </section>
-        <section class="section--type2" id="refugees">
+        <section class="section--type4" id="refugees">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">&pound;500,000</strong> was pledged for scholarships for refugees</div>
             </div>
         </section>
-        <section class="section--type3" id="donations">
+        <section class="section--type1" id="donations">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">&pound;4,034,000</strong> in philanthropic donations was given by our alumni and friends</div>
             </div>
         </section>
-        <section class="section--type4" id="lectures">
+        <section class="section--type2" id="lectures">
             <div class="section__content">
                 <div class="section__stat"><strong class="section__number">4,248,031</strong> hours of lectures, tutorials, practicals and seminars were timetabled for our students</div>
             </div>
         </section>
-        <section class="section--type1 section--image" id="outro" style="background-image:url(img/fireworks-teal.jpg);">
+        <section class="section--type3" id="outro">
             <div class="section__content">
                 <div class="section__text">
-                    <h2 class="outro__header">Happy holidays!</h2>
-                    <p>Phew! What a year. And we're looking forward to 2016 being even bigger and better!</p>
+                    <h2 class="outro__header">Merry Christmas!</h2>
+                    <p>Phew, what a year! We're looking forward to 2016 being even bigger and better!</p>
+                    <p>Share this with a friend:</p>
                     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=uniofyork" async="async"></script>
                     <div class="addthis_sharing_toolbox"></div>
                 </div>
